@@ -1978,7 +1978,7 @@ fi])
 
 ## R_BITMAPS
 ## ---------
-## This is the version used without png-config
+## This is the version used without pkg-config
 ## Here we only need any old -lz, and don't need zlib.h.
 ## However, we do need recent enough libpng and jpeg, and so check both
 ## the header versions and for key routines in the library.
@@ -2047,17 +2047,17 @@ AC_SUBST(BITMAP_LIBS)
 
 ## R_BITMAPS2
 ## ---------
-## This is the version used with png-config
+## This is the version used with pkg-config
 AC_DEFUN([R_BITMAPS2],
 [BITMAP_CPPFLAGS=
 BITMAP_LIBS=
 if test "${use_jpeglib}" = yes; then
    save_CPPFLAGS=${CPPFLAGS}
-  ## jpeglib does not support pkg-config, although some OSes add it.
-  ## This is untested.
-  if "${PKGCONF}" --exists jpeg; then
-    JPG_CPPFLAGS=`"${PKGCONF}" --cflags jpeg`
-    JPG_LIBS=`"${PKGCONF}" --libs jpeg`
+  ## IJG version 9c (Jan 2018) has support as libjpeg.
+  ## libjpeg-turbo has had this for a while.
+  if "${PKGCONF}" --exists libjpeg; then
+    JPG_CPPFLAGS=`"${PKGCONF}" --cflags libjpeg`
+    JPG_LIBS=`"${PKGCONF}" --libs libjpeg`
     CPPFLAGS="${CPPFLAGS} ${JPG_CPPFLAGS}"
   fi
   _R_HEADER_JPEGLIB
